Fix overlapping div in header

--- a/src/app/styl/settings.styl
+++ b/src/app/styl/settings.styl
@@ -4,9 +4,13 @@
 	width calc(100% - 5px)
 	position fixed
 	scrollable()
-	padding-top: 45px
+	padding-top: TitleHeight + 10px 
 	&::-webkit-scrollbar-track
-		margin-top: 45px
+		margin-top: TitleHeight
+		
+	.close-icon
+		top: 58px
+		right: 30px
 
 .settings-container
 	z-index 1
